--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -16,7 +16,7 @@
   }
   
   .nav--dark {
-    background-color: #f3eded;
+    background-color: #333;
     color: #fff;
     padding: 10px;
   }
@@ -75,7 +75,7 @@
     padding: 0.5rem 0;
     transition: color 0.3s ease;
   }
-  
+  /* link link--nav */
   .link--nav::after {
     content: '';
     position: absolute;
