--- a/src/ScrolltoTop/ScrollToTop.css
+++ b/src/ScrolltoTop/ScrollToTop.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 2em;
     right: 4em;
-    background-color: transparent;
+    background-color: blur(0);
   }
   
   @media (max-width: 900px) {
